--- a/NHN/index.html
+++ b/NHN/index.html
@@ -9,7 +9,7 @@
     <div class="wrap">
         <header>
             <div class="logo">
-            <img src="./img/logo.png" alt="logo">
+                <a href="index.html"><img src="./img/logo.png" alt="logo"></a>
             </div>
             <nav>
                 <ul>
