--- a/NHN/notice_1.html
+++ b/NHN/notice_1.html
@@ -8,7 +8,7 @@
 <body>
     <div class="wrap_n1">
         <header>
-            <div class="logo"><img src="./img/logo.png" alt="logo"></div>
+            <div class="logo"><a href="index.html"><img src="./img/logo.png" alt="logo"></a></div>
              <nav>
                 <ul>
                     <li><a href="notice_1.html">공지사항</a></li>
@@ -48,7 +48,7 @@
             </div><div class="box_1"><div class="number_1">1</div>
              <div class="graybox"><p>키워드</p></div>
             </div>
-           
+            <div class="N_footer"><p>대표이사: 정우진,주소:경기도 성남시 분당구 살평동 629 NHN엔터테인먼트 플레이뮤지엄.</p><p>Copyright ©<span> NHN Entertainment Corp.</span> All rights reserverd.</p></div>
         </section>
     </div>
 </body>
