--- a/NHN/index.html
+++ b/NHN/index.html
@@ -13,8 +13,8 @@
             </div>
             <nav>
                 <ul>
-                    <li>채용공고</li>
-                    <li>공지사항</li>
+                    <li><a href="notice_2.html">채용공고</a></li>
+                    <li><a href="notice_1.html">공지사항</a></li>
                 </ul>
             </nav>
         </header>
