--- a/NHN/notice_1.html
+++ b/NHN/notice_1.html
@@ -45,8 +45,13 @@
                     </tbody>
                 </table>
                 
-            </div><div class="box_1"><div class="number_1">1</div>
-             <div class="graybox"><p>키워드</p></div>
+            </div>
+            <div class="box_1">
+                <div class="box_2">
+                <button class="number_1">1</button></div>
+                <div class="box_3">
+             <input type="text" value="키워드" class="graybox">
+                </div>
             </div>
             <div class="N_footer"><p>대표이사: 정우진,주소:경기도 성남시 분당구 살평동 629 NHN엔터테인먼트 플레이뮤지엄.</p><p>Copyright ©<span> NHN Entertainment Corp.</span> All rights reserverd.</p></div>
         </section>
