--- a/NHN/notice_2.html
+++ b/NHN/notice_2.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>notice_2 채용공고</title>
+    <link rel="stylesheet" href="css/notice2.css">
 </head>
 <body>
-    
+    <div class="wrap_n2">
+        <header>
+            <div class="logo"><a href="index.html"><img src="./img/logo.png" alt="logo"></a></div>
+            <nav>
+                <ul>
+                    <li><a href="notice_1.html">공지사항</a></li>
+                    <li><a href="notice_2.html">채용공고</a></li>
+                    <li><a href="#">채용문의</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <div class="b_box">
+                <img src="img/notice2.jpg" alt="notice_2.img"/>
+            </div>
+            <div class="notice_2">
+                <h1>드래곤볼</h1>
+                <div class="box_1">법인별 공고</div>
+                <div class="box_2">직군별 공고</div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
