notice2 테이블 만들기전

--- a/NHN/notice_2.html
+++ b/NHN/notice_2.html
@@ -25,6 +25,15 @@
                 <h1>드래곤볼</h1>
                 <div class="box_1">법인별 공고</div>
                 <div class="box_2">직군별 공고</div>
+                <div class="grayNHN"><img src="img/NHNgray.PNG" alt="NHNgray img"/></div>
+                <table>
+                    <thead>
+
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
             </div>
         </section>
     </div>
