--- a/chan1/index.html
+++ b/chan1/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
 <div class="wrap">
@@ -80,7 +82,12 @@
             </ul>
         </nav>
     </div>
-
+    <div class="content_wrap">
+        <ul class="slide_box">
+            <li><img src="img/content1.png"alt="slide_img"/></li>
+            <li><img src="img/content2.png"alt="slide_img"/></li>
+            <li><img src="img/content3.png"alt="slide_img"/></li>
+        </ul>
 
 </div>
 </body>
