--- a/chan1/index.html
+++ b/chan1/index.html
@@ -90,7 +90,44 @@
                 <li><img src="img/content2.png"alt="slide_img"/></li>
                 <li><img src="img/content3.png"alt="slide_img"/></li>
             </ul>
-
+            <div class="table_box">
+                <table id="table_1">
+                    <thead>
+                    <tr>
+                        <th><a href="#">공지사항</a></th>
+                        <th><a href="#">가정통신문</a></th>
+                        <th id="plus_view"><a href="#">더보기 ▶</a></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><a href="#">2018학년도 교무평가 실시</a></td>
+                        <td>2018-04-04</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">2019학년도 교무평가 실시</a></td>
+                        <td>2019-04-04</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">2020학년도 교무평가 실시</a></td>
+                        <td>2020-04-04</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">2021학년도 교무평가 실시</a></td>
+                        <td>2021-04-04</td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">2022학년도 교무평가 실시</a></td>
+                        <td>2022-04-04</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <ul id="pop_box">
+                <li><img src="img/popup3.jpg"alt="pop_img"/></li>
+                <li><a href="#"><img src="img/popup2.jpg"alt="pop_img"/></a></li>
+                <li><img src="img/popup1.jpg"alt="pop_img"/></li>
+            </ul>
     </div>
     </body>
 </html>
