--- a/chan1/index.html
+++ b/chan1/index.html
@@ -8,6 +8,7 @@
         <script src="index.js"></script>
     </head>
 <body>
+<div class="del_box"><div class="del2"><button class="del">x</button><img src="img/b_popup1.jpg" alt="pop_img"/></div></div>
 <div class="wrap">
     <div id="wrap_header">
         <div class="wrap_header_1">
@@ -126,8 +127,9 @@
             <ul id="pop_box">
                 <li><img src="img/popup3.jpg"alt="pop_img"/></li>
                 <li><a href="#"><img src="img/popup2.jpg"alt="pop_img"/></a></li>
-                <li><img src="img/popup1.jpg"alt="pop_img"/></li>
+                <li class="pop_box"><img src="img/popup1.jpg"alt="pop_img"/></li>
             </ul>
     </div>
+</div>
     </body>
 </html>
