--- a/chan1/index.html
+++ b/chan1/index.html
@@ -91,38 +91,73 @@
                 <li><img src="img/content2.png"alt="slide_img"/></li>
                 <li><img src="img/content3.png"alt="slide_img"/></li>
             </ul>
+            <div class="table_all">
             <div class="table_box">
-                <table id="table_1">
+                <table class="table_1" id="nhide_table">
                     <thead>
                     <tr>
-                        <th><a href="#">공지사항</a></th>
-                        <th><a href="#">가정통신문</a></th>
-                        <th id="plus_view"><a href="#">더보기 ▶</a></th>
+                        <th class="th_1"><a href="#"><span id="th_color1">공지사항</span></a></th>
+                        <th class="th_2"><a href="#">가정통신문</a></th>
+                        <th class="plus_view"><a href="#">더보기 ▶</a></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                <tr>
+                    <td><a href="#">2018학년도 교무평가 실시</a></td>
+                    <td>2018-04-04</td>
+                </tr>
+                <tr>
+                    <td><a href="#">2019학년도 교무평가 실시</a></td>
+                    <td>2019-04-04</td>
+                </tr>
+                <tr>
+                    <td><a href="#">2020학년도 교무평가 실시</a></td>
+                    <td>2020-04-04</td>
+                </tr>
+                <tr>
+                    <td><a href="#">2021학년도 교무평가 실시</a></td>
+                    <td>2021-04-04</td>
+                </tr>
+                <tr>
+                    <td><a href="#">2022학년도 교무평가 실시</a></td>
+                    <td>2022-04-04</td>
+                </tr>
+                </tbody>
+                </table>
+            </div>
+            <div id="h_t" >
+                <table class="table_1">
+                    <thead>
+                    <tr>
+                        <th class="th_1"><a href="#">공지사항</a></th>
+                        <th class="th_2"><a href="#">가정통신문</a></th>
+                        <th class="plus_view"><a href="#">더보기 ▶</a></th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                        <td><a href="#">2018학년도 교무평가 실시</a></td>
+                        <td><a href="#">2018학년도 시험범위</a></td>
                         <td>2018-04-04</td>
                     </tr>
                     <tr>
-                        <td><a href="#">2019학년도 교무평가 실시</a></td>
+                        <td><a href="#">2019학년도 시험범위</a></td>
                         <td>2019-04-04</td>
                     </tr>
                     <tr>
-                        <td><a href="#">2020학년도 교무평가 실시</a></td>
+                        <td><a href="#">2020학년도 시험범위</a></td>
                         <td>2020-04-04</td>
                     </tr>
                     <tr>
-                        <td><a href="#">2021학년도 교무평가 실시</a></td>
+                        <td><a href="#">2021학년도 시험범위</a></td>
                         <td>2021-04-04</td>
                     </tr>
                     <tr>
-                        <td><a href="#">2022학년도 교무평가 실시</a></td>
+                        <td><a href="#">2022학년도 시험범위</a></td>
                         <td>2022-04-04</td>
                     </tr>
                     </tbody>
                 </table>
+            </div>
             </div>
             <ul id="pop_box">
                 <li><img src="img/popup3.jpg"alt="pop_img"/></li>
@@ -130,6 +165,7 @@
                 <li class="pop_box"><img src="img/popup1.jpg"alt="pop_img"/></li>
             </ul>
     </div>
+
 </div>
     </body>
 </html>
