--- a/chan1/index.html
+++ b/chan1/index.html
@@ -104,23 +104,23 @@
                     <tbody>
                 <tr>
                     <td><a href="#">2018학년도 교무평가 실시</a></td>
-                    <td>2018-04-04</td>
+                    <td class="right">2018-04-04</td>
                 </tr>
                 <tr>
                     <td><a href="#">2019학년도 교무평가 실시</a></td>
-                    <td>2019-04-04</td>
+                    <td class="right">2019-04-04</td>
                 </tr>
                 <tr>
                     <td><a href="#">2020학년도 교무평가 실시</a></td>
-                    <td>2020-04-04</td>
+                    <td class="right">2020-04-04</td>
                 </tr>
                 <tr>
                     <td><a href="#">2021학년도 교무평가 실시</a></td>
-                    <td>2021-04-04</td>
+                    <td class="right">2021-04-04</td>
                 </tr>
                 <tr>
                     <td><a href="#">2022학년도 교무평가 실시</a></td>
-                    <td>2022-04-04</td>
+                    <td class="right">2022-04-04</td>
                 </tr>
                 </tbody>
                 </table>
@@ -137,33 +137,36 @@
                     <tbody>
                     <tr>
                         <td><a href="#">2018학년도 시험범위</a></td>
-                        <td>2018-04-04</td>
+                        <td class="right">2018-04-05</td>
                     </tr>
                     <tr>
                         <td><a href="#">2019학년도 시험범위</a></td>
-                        <td>2019-04-04</td>
+                        <td class="right">2019-04-06</td>
                     </tr>
                     <tr>
                         <td><a href="#">2020학년도 시험범위</a></td>
-                        <td>2020-04-04</td>
+                        <td class="right">2020-04-07</td>
                     </tr>
                     <tr>
                         <td><a href="#">2021학년도 시험범위</a></td>
-                        <td>2021-04-04</td>
+                        <td class="right">2021-04-08</td>
                     </tr>
                     <tr>
                         <td><a href="#">2022학년도 시험범위</a></td>
-                        <td>2022-04-04</td>
+                        <td class="right">2022-04-09</td>
                     </tr>
                     </tbody>
                 </table>
             </div>
+                <div class="calender">
+                </div>
             </div>
             <ul id="pop_box">
                 <li><img src="img/popup3.jpg"alt="pop_img"/></li>
                 <li><a href="#"><img src="img/popup2.jpg"alt="pop_img"/></a></li>
                 <li class="pop_box"><img src="img/popup1.jpg"alt="pop_img"/></li>
             </ul>
+
     </div>
 
 </div>
