--- a/chan1/index.html
+++ b/chan1/index.html
@@ -20,7 +20,7 @@
                 <div class="box"><a href="#">사이트맵</a></div>
             </div>
             <div class="search">
-                <input type="text"placeholder="검색"><button class="img_button"></button>
+                <input type="text" placeholder="검색"><button class="img_button"></button>
             </div>
 
         </div>
@@ -87,9 +87,9 @@
     </div>
         <div class="content_wrap">
             <ul class="slide_box">
-                <li><img src="img/content1.png"alt="slide_img"/></li>
-                <li><img src="img/content2.png"alt="slide_img"/></li>
-                <li><img src="img/content3.png"alt="slide_img"/></li>
+                <li><img src="img/content1.png" alt="slide_img"/></li>
+                <li><img src="img/content2.png" alt="slide_img"/></li>
+                <li><img src="img/content3.png" alt="slide_img"/></li>
             </ul>
             <div class="table_all">
             <div class="table_box">
@@ -104,28 +104,23 @@
                     <tbody>
                 <tr>
                     <td><a href="#">2018학년도 교무평가 실시</a></td>
-                    <td class="right">2018-04-04</td>
-                </tr>
+                    <td class="right">2018-04-04</td></tr>
                 <tr>
                     <td><a href="#">2019학년도 교무평가 실시</a></td>
-                    <td class="right">2019-04-04</td>
-                </tr>
+                    <td class="right">2019-04-04</td></tr>
                 <tr>
                     <td><a href="#">2020학년도 교무평가 실시</a></td>
-                    <td class="right">2020-04-04</td>
-                </tr>
+                    <td class="right">2020-04-04</td></tr>
                 <tr>
                     <td><a href="#">2021학년도 교무평가 실시</a></td>
-                    <td class="right">2021-04-04</td>
-                </tr>
+                    <td class="right">2021-04-04</td></tr>
                 <tr>
                     <td><a href="#">2022학년도 교무평가 실시</a></td>
-                    <td class="right">2022-04-04</td>
-                </tr>
+                    <td class="right">2022-04-04</td></tr>
                 </tbody>
                 </table>
             </div>
-            <div id="h_t" >
+            <div id="h_t" class="table_box">
                 <table class="table_1">
                     <thead>
                     <tr>
@@ -137,35 +132,55 @@
                     <tbody>
                     <tr>
                         <td><a href="#">2018학년도 시험범위</a></td>
-                        <td class="right">2018-04-05</td>
-                    </tr>
+                        <td class="right">2018-04-05</td></tr>
                     <tr>
                         <td><a href="#">2019학년도 시험범위</a></td>
-                        <td class="right">2019-04-06</td>
-                    </tr>
+                        <td class="right">2019-04-06</td></tr>
                     <tr>
                         <td><a href="#">2020학년도 시험범위</a></td>
-                        <td class="right">2020-04-07</td>
-                    </tr>
+                        <td class="right">2020-04-07</td></tr>
                     <tr>
                         <td><a href="#">2021학년도 시험범위</a></td>
-                        <td class="right">2021-04-08</td>
-                    </tr>
+                        <td class="right">2021-04-08</td></tr>
                     <tr>
                         <td><a href="#">2022학년도 시험범위</a></td>
-                        <td class="right">2022-04-09</td>
-                    </tr>
+                        <td class="right">2022-04-09</td></tr>
                     </tbody>
                 </table>
             </div>
-                <div class="calender">
-                </div>
+
             </div>
             <ul id="pop_box">
-                <li><img src="img/popup3.jpg"alt="pop_img"/></li>
-                <li><a href="#"><img src="img/popup2.jpg"alt="pop_img"/></a></li>
-                <li class="pop_box"><img src="img/popup1.jpg"alt="pop_img"/></li>
+                <li><img src="img/popup3.jpg" alt="pop_img"/></li>
+                <li><a href="#"><img src="img/popup2.jpg" alt="pop_img"/></a></li>
+                <li class="pop_box"><img src="img/popup1.jpg" alt="pop_img"/></li>
             </ul>
+            <div class="gallery">
+                <div class="calender">
+                    <div class="c_t">
+                        <p id="m_more">오늘의 일정<a href="#" class="right_b">+</a></p>
+                        <p class="c_year_date">sss</p>
+                    </div>
+                    <div class="c_m">
+                        <div class="l_box">
+                            <p class="button" id="l_bt">◀</p>
+                        </div>
+                        <div class="m_box">
+
+                   </div>
+                        <div class="r_box">
+                            <p class="button" id="r_bt">▶</p>
+                        </div>
+                    </div>
+                    <div class="c_f">
+                        <p id="b_b">1학년 수련회 <a href="#" class="right_b">+</a></p>
+                        <p>2학년 교육여행<a href="#" class="right_b">+</a></p>
+                    </div>
+                </div>
+                <div class="lunch">
+
+                </div>
+            </div>
 
     </div>
 
