main페이지 완성

--- a/chan1/index.html
+++ b/chan1/index.html
@@ -8,7 +8,7 @@
         <script src="index.js"></script>
     </head>
 <body>
-<div class="del_box"><div class="del2"><button class="del">x</button><img src="img/b_popup1.jpg" alt="pop_img"/></div></div>
+<div class="del_box"><div class="del2"><div class="box1"><img src="img/b_lunch.jpg" alt="lunch"/></div><button class="del">닫기</button></div></div>
 <div class="wrap">
     <div id="wrap_header">
         <div class="wrap_header_1">
@@ -87,7 +87,7 @@
     </div>
         <div class="content_wrap">
             <ul class="slide_box">
-                <li><img src="img/content1.png" alt="slide_img"/></li>
+                <li><img src="img/content1.jpg" alt="slide_img"/></li>
                 <li><img src="img/content2.png" alt="slide_img"/></li>
                 <li><img src="img/content3.png" alt="slide_img"/></li>
             </ul>
@@ -96,8 +96,8 @@
                 <table class="table_1" id="nhide_table">
                     <thead>
                     <tr>
-                        <th class="th_1"><a href="#"><span id="th_color1">공지사항</span></a></th>
-                        <th class="th_2"><a href="#">가정통신문</a></th>
+                        <th class="th_1"><span id="th_color1">공지사항</span></th>
+                        <th class="th_2">가정통신문</th>
                         <th class="plus_view"><a href="#">더보기 ▶</a></th>
                     </tr>
                     </thead>
@@ -124,8 +124,8 @@
                 <table class="table_1">
                     <thead>
                     <tr>
-                        <th class="th_1"><a href="#">공지사항</a></th>
-                        <th class="th_2"><a href="#">가정통신문</a></th>
+                        <th class="th_1">공지사항</th>
+                        <th class="th_2">가정통신문</th>
                         <th class="plus_view"><a href="#">더보기 ▶</a></th>
                     </tr>
                     </thead>
@@ -153,7 +153,7 @@
             <ul id="pop_box">
                 <li><img src="img/popup3.jpg" alt="pop_img"/></li>
                 <li><a href="#"><img src="img/popup2.jpg" alt="pop_img"/></a></li>
-                <li class="pop_box"><img src="img/popup1.jpg" alt="pop_img"/></li>
+                <li><img src="img/popup1.jpg" alt="pop_img"/></li>
             </ul>
             <div class="gallery">
                 <div class="calender">
@@ -178,12 +178,43 @@
                     </div>
                 </div>
                 <div class="lunch">
-
+                    <div class="l_t">
+                        <p>오늘의 급식<a href="#" class="right_b">+</a></p>
+                    </div>
+                    <div class="l_m">
+                    <img src="img/lunch.jpg" alt="today lunch"/>
+                    </div>
+                <div class="l_b">
+                    <p>왕감자, 식혜</p>
+                </div>
                 </div>
             </div>
-
     </div>
-
+    <div class="footer">
+        <div class="f_topbox">
+              <div class="f_t">
+                 <ul>
+                     <li><img src="img/footer1.png" alt="footer_img"/></li>
+                     <li><img src="img/footer2.png" alt="footer_img"/></li>
+                     <li><img src="img/footer3.png" alt="footer_img"/></li>
+                      <li><img src="img/footer4.png" alt="footer_img"/></li>
+                     <li><img src="img/footer5.png" alt="footer_img"/></li>
+                   </ul>
+             </div>
+        </div>
+        <div class="f_bottombox">
+            <div class="f_btopbox">
+                <img src="img/logo.PNG" alt="logo"/>
+                <div class="fbox_1"><a href="#"><span class="red_1">개인정보처리방침</span></a> | <a href="#">서비스이용약관</a> |
+                    <a href="#">저작권보호정책</a> | <a href="#">학교길 안내</a></div>
+            </div>
+            <div class="f_bbottombox">
+                <p class="font_gray">[04346] 서울 용산구 회나무로12길 27(이태원동, 서울디지텍고등학교)</p>
+                <p class="font_gray">대표전화) 02 - 798 -3641 - 3 팩스) 02 - 794 -0822</p>
+                <p class="font_Copyright">Copyright (c) 2018 박찬웅. All rights reserved</p>
+            </div>
+        </div>
+    </div>
 </div>
     </body>
 </html>
