--- a/NHN/notice_2.html
+++ b/NHN/notice_2.html
@@ -22,19 +22,77 @@
                 <img src="img/notice2.jpg" alt="notice_2.img"/>
             </div>
             <div class="notice_2">
-                <h1>드래곤볼</h1>
+                <h1>채용공고</h1>
                 <div class="box_1">법인별 공고</div>
                 <div class="box_2">직군별 공고</div>
                 <div class="grayNHN"><img src="img/NHNgray.PNG" alt="NHNgray img"/></div>
-                <table>
+                <table id="nt_2">
                     <thead>
-
+                    <tr id="top_table">
+                        <td >NHN Ent 모집분야</td>
+                        <td class="taget">대상</td>
+                        <td class="job">직군</td>
+                        <td>모집기간</td>
+                        <td>지원서 작성</td>
+                    </tr>
                     </thead>
-                    <tbody>
-
+                    <tbody id="s_table">
+                            <tr>
+                                <td>java 웹 서비스 플렛폼 개발자</td>
+                                <td class="taget">경력</td>
+                                <td class="job">기술</td>
+                                <td class="time">2017.05.06 - 채용시까지</td>
+                                <td class="button_1">
+                                    <button type="button" class="red_bt">신규지원</button>
+                                    <button type="button" class="gray_bt">수정</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>ios/android 모바일 앱 경력자 채용</td>
+                                <td class="taget">경력</td>
+                                <td class="job">기술</td>
+                                <td class="time">2017.05.06 - 채용시까지</td>
+                                <td class="button_1">
+                                    <button type="button" class="red_bt">신규지원</button>
+                                    <button type="button" class="gray_bt">수정</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>시스템 플렛폼 개발자</td>
+                                <td class="taget">경력</td>
+                                <td class="job">기술</td>
+                                <td class="time">2017.05.06 - 채용시까지</td>
+                                <td class="button_1">
+                                    <button type="button" class="red_bt">신규지원</button>
+                                    <button type="button" class="gray_bt">수정</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>시스템 플렛폼 개발자</td>
+                                <td class="taget">경력</td>
+                                <td class="job">기술</td>
+                                <td class="time">2017.05.06 - 채용시까지</td>
+                                <td class="button_1">
+                                    <button type="button" class="red_bt">신규지원</button>
+                                    <button type="button" class="gray_bt">수정</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>시스템 플렛폼 개발자</td>
+                                <td class="taget">경력</td>
+                                <td class="job">기술</td>
+                                <td class="time">2017.05.06 - 채용시까지</td>
+                                <td class="button_1">
+                                    <button type="button" class="red_bt">신규지원</button>
+                                    <button type="button" class="gray_bt">수정</button>
+                                </td>
+                            </tr>
                     </tbody>
                 </table>
+                <div id="box_1"></div>
+                <div class="N_footer"><p>대표이사: 정우진,주소:경기도 성남시 분당구 살평동 629 NHN엔터테인먼트 플레이뮤지엄.</p><p>Copyright ©<span> NHN Entertainment Corp.</span> All rights reserverd.</p></div>
             </div>
+
         </section>
     </div>
 </body>
