--- a/chan1/form.html
+++ b/chan1/form.html
@@ -27,7 +27,7 @@
         .id_name{padding-top: 10px;}
         .id_address{padding-top: 10px;}
         #bt{height: 120px}
-        #ok{width: 220px;height: 60px;margin: 0  auto;background: #e8262d;border:#e8262d;font-size:20px;color: white;display: block;margin-top: 20px;}
+        #ok{width: 220px;height: 60px;margin: 0  auto;background: #4d87ef;border:#4d87ef;font-size:20px;color: white;display: block;margin-top: 20px;}
         #id{text-indent: 15px;border: 0.5px solid #d1d1d1;}
         #password{text-indent: 15px;border: 0.5px solid #d1d1d1;}
         #pwd_chk{text-indent: 15px;border: 0.5px solid #d1d1d1;}
