--- a/chanwoong/index.html
+++ b/chanwoong/index.html
@@ -101,11 +101,22 @@
         </div>
     </div>
         <div class="content_wrap">
+            <div class="main_slide">
+            <div id="button_box">
+                <div class="button_s"><a href="#"  id="left_button" ><</a></div>
+                <div class="button_s"><a href="#"  id="right_button" >></a></div>
+            </div>
             <ul class="slide_box">
                 <li><img src="img/content1.jpg" alt="slide_img"/></li>
                 <li><img src="img/content2.png" alt="slide_img"/></li>
                 <li><img src="img/content3.png" alt="slide_img"/></li>
             </ul>
+            <ul id="subnav">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            </div>
             <div class="table_all">
             <div class="table_box">
                 <div class="plus_view"><a href="#" >더보기 ▶</a></div>
