slide 네비게이션

--- a/chanwoong/index.html
+++ b/chanwoong/index.html
@@ -103,14 +103,16 @@
         <div class="content_wrap">
             <div class="main_slide">
             <div id="button_box">
-                <div class="button_s"><a href="#"  id="left_button" ><</a></div>
-                <div class="button_s"><a href="#"  id="right_button" >></a></div>
+                <div class="button_s"><a href="#"  id="prev" ><</a></div>
+                <div class="button_s"><a href="#"  id="next" >></a></div>
             </div>
-            <ul class="slide_box">
-                <li><img src="img/content1.jpg" alt="slide_img"/></li>
-                <li><img src="img/content2.png" alt="slide_img"/></li>
-                <li><img src="img/content3.png" alt="slide_img"/></li>
-            </ul>
+                <div class="slider_continer">
+                     <ul class="slide_box">
+                          <li><img src="img/content1.jpg" alt="slide_img"/></li>
+                          <li><img src="img/content2.png" alt="slide_img"/></li>
+                          <li><img src="img/content3.png" alt="slide_img"/></li>
+                     </ul>
+                </div>
             <ul id="subnav">
                 <li></li>
                 <li></li>
